Fixed missing padding between header and page content on phones where the breadcrumb trail is hidden.

--- a/user/themes/academydeliver/css-compiled/template.css
+++ b/user/themes/academydeliver/css-compiled/template.css
@@ -66,6 +66,9 @@ b, strong, label, th {
 
 #content {
   margin-bottom: 2rem; }
+  @media only all and (max-width: 47.938em) {
+    #content {
+      padding-top: 1rem; } }
   #content p:first-child {
     margin-top: 0; }
 
